--- a/FeelFlowAnalysis/Components/Pages/Counter.razor
+++ b/FeelFlowAnalysis/Components/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@page "/counter/{startValue:int}"
 @rendermode InteractiveServer
 
 <PageTitle>Counter</PageTitle>
@@ -10,9 +11,16 @@
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
+    private int currentCount = 0;
+    
     [Parameter]
-    public int currentCount { get; set; } = 0;
+    public int StartValue { get; set; } = 0;
 
+    protected override void OnParametersSet()
+    {
+        currentCount = StartValue;
+        base.OnParametersSet();
+    }
     private void IncrementCount()
     {
         currentCount++;
