--- a/FeelFlowAnalysis/Components/Layout/MainLayout.razor
+++ b/FeelFlowAnalysis/Components/Layout/MainLayout.razor
@@ -6,10 +6,14 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="top-row">
+            <a class="navbar-brand" href="">FeelFlow Analysis</a>
+            <div class="button-pos">
+                <button class="btn btn-primary">Sing in</button>
+                <button class="btn btn-primary">Sing up</button>
+            </div>
         </div>
-
+        
         <article class="content px-4">
             @Body
         </article>
