--- a/FeelFlowAnalysis/wwwroot/app.css
+++ b/FeelFlowAnalysis/wwwroot/app.css
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'League Spartan', sans-serif;
 }
 
 a, .btn-link {
