Rename the method

--- a/FeelFlowAnalysis/Components/Pages/Home.razor
+++ b/FeelFlowAnalysis/Components/Pages/Home.razor
@@ -4,16 +4,16 @@
 <div class="home-container">
     <p class="text-handler">Upload your photo or video...</p>
     <div class="upload-button-container">
-        <InputFile OnChange="@HandleFileUplode" id="fileInput" class="input-file" />
+        <InputFile OnChange="@HandleFileUpload" id="fileInput" class="input-file" />
         <label for="fileInput" class="button upload-button">Upload</label>
     </div>
 </div>
 
 @code {
 
-    async Task HandleFileUplode(InputFileChangeEventArgs eventArgs)
+    async Task HandleFileUpload(InputFileChangeEventArgs e)
     {
-        IBrowserFile? file = eventArgs.File;
+        var file = e.File;
 
         if(file != null)
         {
@@ -21,5 +21,6 @@
             await file.OpenReadStream().ReadAsync(bytes);
         }
 
+        
     }
 }   
