Added data transformation (pictures) to the data model AnalyzeModel and sending to the server

--- a/FeelFlowAnalysis/Components/Layout/MainLayout.razor
+++ b/FeelFlowAnalysis/Components/Layout/MainLayout.razor
@@ -9,8 +9,7 @@
         <div class="top-row">
             <a class="navbar-brand" href="">FeelFlow Analysis</a>
             <div class="button-pos">
-                <button class="btn btn-primary">Sing in</button>
-                <button class="btn btn-primary">Sing up</button>
+                <button class="btn btn-primary">Sing up with Google</button>
             </div>
         </div>
         
