--- a/FeelFlowAnalysis/Components/Pages/Home.razor
+++ b/FeelFlowAnalysis/Components/Pages/Home.razor
@@ -1,26 +1,60 @@
 ﻿@page "/"
+@using System.Text;
+@using System.Text.Json;
 
 <PageTitle>Home</PageTitle>
 <div class="home-container">
     <p class="text-handler">Upload your photo or video...</p>
     <div class="upload-button-container">
-        <InputFile OnChange="@HandleFileUpload" id="fileInput" class="input-file" />
-        <label for="fileInput" class="button upload-button">Upload</label>
+        <label class="button upload-button">
+            Upload
+            <InputFile OnChange="@OnInputFileChange" />
+        </label>
+        @* @if (imageBytes != null)
+        {
+            <img src="@imageSource" alt="Uploaded Image" />
+        } *@
     </div>
 </div>
 
-@code {
 
-    async Task HandleFileUpload(InputFileChangeEventArgs e)
+@code {
+    private byte[]? imageBytes;
+    private string? imageSource;
+    private async Task OnInputFileChange(InputFileChangeEventArgs e)
     {
+        Console.WriteLine("Hui");
         var file = e.File;
 
-        if(file != null)
+        if(file == null)
         {
-            var bytes = new byte[file.Size];
-            await file.OpenReadStream().ReadAsync(bytes);
+            return;
         }
 
-        
+        if (!file.ContentType.StartsWith("image"))
+        {
+            return;
+        }
+
+        using (var memoryStream = new MemoryStream())
+        {
+            await file.OpenReadStream().CopyToAsync(memoryStream);
+            imageBytes = memoryStream.ToArray();
+            imageSource = $"data:{file.ContentType};base64,{Convert.ToBase64String(imageBytes)}";
+        }
+
+        var values = new Dictionary<string, bool>
+        {
+            {"age", true}, {"emotion", true}, {"gender", true}, {"race", true}
+        };
+
+        var jsonContent = JsonSerializer.Serialize(new Models.AnalyzeModel { B64img = imageSource, Actions = values } );
+        var content = new StringContent(jsonContent, Encoding.UTF8, "application/json");
+
+        using (var client = new HttpClient())
+        {
+            var response = await client.PostAsync("http://127.0.0.1:8000/analyze", content);
+            Console.WriteLine(response);
+        }
     }
 }   
