--- a/FeelFlowAnalysis/Components/App.razor
+++ b/FeelFlowAnalysis/Components/App.razor
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
+    <script src="/Scripts/LogIn.js"></script>
+    <script src="/Scripts/SingUp.js"></script>
     <HeadOutlet />
 </head>
 
