--- a/FeelFlowAnalysis/Components/Layout/MainLayout.razor
+++ b/FeelFlowAnalysis/Components/Layout/MainLayout.razor
@@ -9,10 +9,11 @@
         <div class="top-row">
             <a class="navbar-brand" href="">FeelFlow Analysis</a>
             <div class="button-pos">
-                <button class="btn btn-primary">Sing up with Google</button>
+                <button class="btn btn-primary" id="loginBtn">LogIn</button>
+                <button class="btn btn-primary" id="signupBtn">SignUp</button>
             </div>
         </div>
-        
+
         <article class="content px-4">
             @Body
         </article>
@@ -23,4 +24,100 @@
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
+</div>
+
+<!-- LogIn Form-->
+<div class="modal" id="loginModal">
+    <div class="modal-content">
+        <div class="modal-left">
+            <svg width="100" height="100" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="60" cy="60" r="60" fill="#D9D9D9" opacity="0.7" />
+                <path
+                    d="M30.25 33.1C31 39.2 28.35 56.8 35.2 60.15C39.6 62.3 53.25 53.85 55.6 50.15C66.6 32.8 30.25 26.65 30.25 33.1Z"
+                    fill="black" />
+                <path
+                    d="M54.75 62.8C43.95 73 42.95 76.2 56.25 85C68.35 93 79.75 89.8 86.55 75.9C91.45 65.95 82.75 58.6 74.8 53.4C66.55 48 61.1 56.75 54.75 62.8Z"
+                    fill="#E6AA30" />
+            </svg>
+            <div class="modal-heading-container">
+                <h2 class="modal-heading">Welcome to</h2>
+                <h1 class="modal-heading">FeelFlow Analysis</h1>
+            </div>
+            
+        </div>
+        <div class="modal-right">
+            <span class="close" id="loginCloseBtn">&times;</span>
+            <div class="signup__container">
+                <div class="container__child signup__form">
+                    <form action="#">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input class="form-control" type="text" name="email" id="email" placeholder="example@gmail.com" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input class="form-control" type="password" name="password" id="password" placeholder="********" required />
+                        </div>
+                        <div class="m-t-lg">
+                            <ul class="list-inline">
+                                <li>
+                                    <input class="btn btn-primary" type="submit" value="Register" />
+                                </li>
+                            </ul>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- SingUp Form -->
+<div class="modal" id="signupModal">
+    <div class="modal-content">
+        <div class="modal-left">
+            <svg width="100" height="100" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="60" cy="60" r="60" fill="#D9D9D9" opacity="0.7" />
+                <path
+                    d="M30.25 33.1C31 39.2 28.35 56.8 35.2 60.15C39.6 62.3 53.25 53.85 55.6 50.15C66.6 32.8 30.25 26.65 30.25 33.1Z"
+                    fill="black" />
+                <path
+                    d="M54.75 62.8C43.95 73 42.95 76.2 56.25 85C68.35 93 79.75 89.8 86.55 75.9C91.45 65.95 82.75 58.6 74.8 53.4C66.55 48 61.1 56.75 54.75 62.8Z"
+                    fill="#E6AA30" />
+            </svg>
+            <div class="modal-heading-container">
+                <h2 class="modal-heading">Welcome to</h2>
+                <h1 class="modal-heading">FeelFlow Analysis</h1>
+            </div>
+            
+        </div>
+        <div class="modal-right">
+            <span class="close" id="signupCloseBtn">&times;</span>
+            <div class="signup__container">
+                <div class="container__child signup__form">
+                    <form action="#">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input class="form-control" type="text" name="email" id="email" placeholder="example@gmail.com" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input class="form-control" type="password" name="password" id="password" placeholder="********" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Confirm Password</label>
+                            <input class="form-control" type="password" name="password" id="password" placeholder="********" required />
+                        </div>
+                        <div class="m-t-lg">
+                            <ul class="list-inline">
+                                <li>
+                                    <input class="btn btn-primary" type="submit" value="Register" />
+                                </li>
+                            </ul>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
