--- a/FeelFlowAnalysis/Components/Layout/MainLayout.razor.css
+++ b/FeelFlowAnalysis/Components/Layout/MainLayout.razor.css
@@ -14,6 +14,69 @@ main {
     box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.30);
 }
 
+.modal-content {
+    display: flex;
+    flex-direction: row;
+    background-color: #2F2F2F;
+    margin: 5% auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 45%;
+    height: 60vh;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.modal-heading-container
+{
+    margin-top: 60%;
+    justify-content: center;
+}
+
+.modal-heading
+{
+    font-weight: 800;
+    font-size: 250%;
+}
+
+.modal-left, .modal-right {
+    width: 50%;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.modal-left {
+    color: #2F2F2F;
+    background: linear-gradient(rgba(255, 255, 255, 0), #E6AA30);
+    border-radius: 10px 0 0 10px;
+}
+
+.modal-right {
+    background-color: #2F2F2F;
+    color: #E6AA30;
+    border-radius: 0 10px 10px 0;
+}
+
+.modal-right .form-control {
+    background-color: #1E1E1E;
+    color: #E6AA30;
+    border: 1px solid #E6AA30;
+    margin-bottom: 10px;
+}
+
+.close {
+    color: #E6AA30;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 .navbar-brand {
     color: #E6AA30;
