--- a/FeelFlowAnalysis/Components/Layout/NavMenu.razor.css
+++ b/FeelFlowAnalysis/Components/Layout/NavMenu.razor.css
@@ -89,6 +89,11 @@
     display: block;
 }
 
+.nav-menu-title
+{
+    margin-left: 3px;
+}
+
 @media (min-width: 641px) {
     .navbar-toggler {
         display: none;
