--- a/FeelFlowAnalysis/Components/Pages/Home.razor
+++ b/FeelFlowAnalysis/Components/Pages/Home.razor
@@ -4,20 +4,15 @@
 <div class="home-container">
     <p class="text-handler">Upload your photo or video...</p>
     <div class="upload-button-container">
-        <label class="button upload-button">
-            Upload
-            <InputFile OnChange="@OnInputFileChange" />
-        </label>
+        <label class="button upload-button">Upload</label>
     </div>
 </div>
-
 
 @code {
     private byte[]? imageBytes;
     private string? imageSource;
     private async Task OnInputFileChange(InputFileChangeEventArgs e)
     {
-        Console.WriteLine("Hui");
         var file = e.File;
 
         if(file is null)
@@ -41,14 +36,13 @@
         {
             {"age", true}, {"emotion", true}, {"gender", true}, {"race", true}
         };
-
         var jsonContent = JsonSerializer.Serialize(new Models.API.Analyze.AnalyzeModel { B64img = imageSource, Actions = values } );
         var content = new StringContent(jsonContent, Encoding.UTF8, "application/json");
 
         using (var client = new HttpClient())
         {
             var response = await client.PostAsync("http://127.0.0.1:8000/analyze", content);
-            Console.WriteLine(response);
         }
+
     }
 }   
