--- a/FeelFlowAnalysis/Components/_Imports.razor
+++ b/FeelFlowAnalysis/Components/_Imports.razor
@@ -1,4 +1,6 @@
-﻿@using System.Net.Http
+﻿@using System.Text
+@using System.Text.Json
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
