Clean code and delete necessary interfaces

--- a/FeelFlowAnalysis/Components/App.razor
+++ b/FeelFlowAnalysis/Components/App.razor
@@ -1,28 +1,29 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="Styles/home.css">
-    <link rel="stylesheet" href="Styles/history.css">
-    <link rel="stylesheet" href="Styles/camera.css">
+    <link rel="stylesheet" href="Styles/home.css" />
+    <link rel="stylesheet" href="Styles/history.css" />
+    <link rel="stylesheet" href="Styles/camera.css" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="FeelFlowAnalysis.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"
+      rel="stylesheet"
+    />
     <script src="/Scripts/LogIn.js"></script>
     <script src="/Scripts/SingUp.js"></script>
     <HeadOutlet />
-</head>
+  </head>
 
-<body>
+  <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-</body>
-
+  </body>
 </html>
