--- a/FeelFlowAnalysis/Components/Pages/Metadata.razor
+++ b/FeelFlowAnalysis/Components/Pages/Metadata.razor
@@ -4,7 +4,7 @@
 
 <h1>Get metadata</h1>
 
-@code {
+@* @code {
     private byte[]? imageBytes;
     private string? imageSource;
     private async Task OnInputFileChange(InputFileChangeEventArgs e)
@@ -37,4 +37,4 @@
         }
 
     }
-}
+} *@
