--- a/FeelFlowAnalysis/Components/Layout/MainLayout.razor.css
+++ b/FeelFlowAnalysis/Components/Layout/MainLayout.razor.css
@@ -6,18 +6,18 @@
 
 main {
     flex: 1;
-    background-color: #1E1E1E;
+    background-color: #1e1e1e;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, #2F2F2F 0%, #2F2F2F 70%);
-    box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.30);
+    background-image: linear-gradient(180deg, #2f2f2f 0%, #2f2f2f 70%);
+    box-shadow: 5px 0px 20px 0px rgba(0, 0, 0, 0.3);
 }
 
 .modal-content {
     display: flex;
     flex-direction: row;
-    background-color: #2F2F2F;
+    background-color: #2f2f2f;
     margin: 5% auto;
     padding: 0;
     border: 1px solid #888;
@@ -27,45 +27,44 @@ main {
     border-radius: 10px;
 }
 
-.modal-heading-container
-{
+.modal-heading-container {
     margin-top: 60%;
     justify-content: center;
 }
 
-.modal-heading
-{
+.modal-heading {
     font-weight: 800;
     font-size: 250%;
 }
 
-.modal-left, .modal-right {
+.modal-left,
+.modal-right {
     width: 50%;
     padding: 20px;
     box-sizing: border-box;
 }
 
 .modal-left {
-    color: #2F2F2F;
-    background: linear-gradient(rgba(255, 255, 255, 0), #E6AA30);
+    color: #2f2f2f;
+    background: linear-gradient(rgba(255, 255, 255, 0), #e6aa30);
     border-radius: 10px 0 0 10px;
 }
 
 .modal-right {
-    background-color: #2F2F2F;
-    color: #E6AA30;
+    background-color: #2f2f2f;
+    color: #e6aa30;
     border-radius: 0 10px 10px 0;
 }
 
 .modal-right .form-control {
-    background-color: #1E1E1E;
-    color: #E6AA30;
-    border: 1px solid #E6AA30;
+    background-color: #1e1e1e;
+    color: #e6aa30;
+    border: 1px solid #e6aa30;
     margin-bottom: 10px;
 }
 
 .close {
-    color: #E6AA30;
+    color: #e6aa30;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -79,7 +78,7 @@ main {
 }
 
 .navbar-brand {
-    color: #E6AA30;
+    color: #e6aa30;
     font-size: 250%;
     text-decoration: none;
     margin-left: 4px;
@@ -89,8 +88,7 @@ main {
     line-height: normal;
 }
 
-.button-pos
-{
+.button-pos {
     float: right;
     margin-right: 10px;
 }
@@ -98,22 +96,30 @@ main {
 .btn-primary {
     transition-duration: 0.2s;
     color: #fff;
-    background-color: #E6AA30;
-    border-color: #E6AA30;
+    background-color: #e6aa30;
+    border-color: #e6aa30;
 }
 
-.btn-primary:hover
-{
-    background-color: #2F2F2F;
+.btn-primary:hover {
+    background-color: #2f2f2f;
 }
 
-.btn:focus, .btn-link:hover, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #E6AA30;
+.btn:focus,
+.btn-link:hover,
+.btn:active:focus,
+.btn-link.nav-link:focus,
+.form-control:focus,
+.form-check-input:focus {
+    box-shadow:
+        0 0 0 0.1rem white,
+        0 0 0 0.25rem #e6aa30;
 }
 
 .top-row {
-    background-color: #2F2F2F;
-    box-shadow: inset 10px 0 5px rgba(0, 0, 0, 0.19), 5px 0px 20px 0px rgba(0, 0, 0, 0.19);
+    background-color: #2f2f2f;
+    box-shadow:
+        inset 10px 0 5px rgba(0, 0, 0, 0.19),
+        5px 0px 20px 0px rgba(0, 0, 0, 0.19);
     height: 6.65rem;
     display: flex;
     justify-content: space-between;
@@ -121,28 +127,30 @@ main {
     margin-left: 0.7px;
 }
 
+.top-row ::deep a,
+.top-row ::deep .btn-link {
+    white-space: nowrap;
+    margin-left: 1.5rem;
+    text-decoration: none;
+}
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        text-decoration: none;
-    }
+.top-row ::deep a:hover,
+.top-row ::deep .btn-link:hover {
+    text-decoration: underline;
+}
 
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
-
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+.top-row ::deep a:first-child {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 @media (max-width: 640.98px) {
     .top-row {
         justify-content: space-between;
     }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
+    .top-row ::deep a,
+    .top-row ::deep .btn-link {
         margin-left: 0;
     }
 }
@@ -184,9 +192,9 @@ main {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
