--- a/FeelFlowAnalysis/wwwroot/Styles/home.css
+++ b/FeelFlowAnalysis/wwwroot/Styles/home.css
@@ -1,15 +1,13 @@
-.home-container
-{
+.home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 19%
+    margin-top: 19%;
 }
 
-.text-handler
-{
-    color:#ffff;
+.text-handler {
+    color: #ffff;
     font-size: 36px;
     font-weight: 400;
 }
@@ -18,9 +16,9 @@
     position: relative;
     overflow: hidden;
 }
-  
+
 .button {
-    background-color: #2F2F2F;
+    background-color: #2f2f2f;
     border: none;
     color: white;
     padding: 16px 32px;
@@ -38,14 +36,14 @@
     width: 251px;
     font-weight: 400;
     font-size: 24px;
-    background-color: #2F2F2F; 
-    color: white; 
-    border: 2px solid #E6AA30;
+    background-color: #2f2f2f;
+    color: white;
+    border: 2px solid #e6aa30;
 }
 
 .upload-button:hover {
     background-color: #404040;
-    border: 3px solid #E6AA30;
+    border: 3px solid #e6aa30;
     color: white;
 }
 
@@ -60,11 +58,11 @@
 }
 
 .input-file::before {
-    content: '';
+    content: "";
     display: none;
 }
 
 .input-file::after {
-    content: '';
+    content: "";
     display: none;
 }
