--- a/FeelFlowAnalysis/Components/Pages/Authorization/SignUp.razor
+++ b/FeelFlowAnalysis/Components/Pages/Authorization/SignUp.razor
@@ -2,9 +2,9 @@
 
 <h3>SignUp</h3>
 
-<EditForm Model="@Model" OnValidSubmit="Authenticate" FormName="SignUpForm">
+@* <EditForm Model="@Model" OnValidSubmit="Authenticate" FormName="SignUpForm">
 
-</EditForm>
+</EditForm> *@
 @* <div class="modal" id="signupModal">
   <div class="modal-content">
     <div class="modal-left">
