--- a/FeelFlowAnalysis/Components/Pages/Authorization/LogOut.razor
+++ b/FeelFlowAnalysis/Components/Pages/Authorization/LogOut.razor
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Authentication
-@inject NavigationManager navigationManager
+﻿@inject NavigationManager navigationManager
 
 <h3>LogOut</h3>
 
