--- a/FeelFlowAnalysis/Components/_Imports.razor
+++ b/FeelFlowAnalysis/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using Microsoft.JSInterop
 @using FeelFlowAnalysis
 @using FeelFlowAnalysis.Components
+@using Microsoft.AspNetCore.Authentication
