--- a/FeelFlowAnalysis/Components/Pages/Main/Home.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/Home.razor
@@ -1,16 +1,16 @@
 ﻿@page "/"
 @layout Layout.MainLayout
 @using Models.ViewModels
+@rendermode InteractiveServer
 
 <PageTitle>Home</PageTitle>
 <div class="home-container">
     <p class="text-handler">Upload your photo or video...</p>
     <div class="upload-button-container">
-        <label class="button upload-button">Upload</label>
-        @* <EditForm OnValidSubmit="LoadFile">
-            <DataAnnotationsValidator />
-            <InputFile @bind-value="file" />
-        </EditForm> *@
+        <label class="button upload-button">
+            Upload
+            <InputFile OnChange="LoadFile" accept="image/*" />
+        </label>
     </div>
 </div>
 @code {
@@ -18,7 +18,6 @@
     private string? imageSource;
     private async Task LoadFile(InputFileChangeEventArgs e)
     {
-        Console.WriteLine("Started!");
         var file = e.File;
 
         if(file is null)
