Add render mode

--- a/FeelFlowAnalysis/Components/Pages/Main/History.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/History.razor
@@ -5,3 +5,8 @@
 <PageTitle>History</PageTitle>
 
 <h1>History</h1>
+@*TODO: Add History and css*@
+@* @foreach(var item in User.History)
+{
+    <p>item</p>
+} *@
