App sugn up & log in forms desing.

--- a/FeelFlowAnalysis/Components/Layout/MainLayout.razor
+++ b/FeelFlowAnalysis/Components/Layout/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager navigationManager
 @using FeelFlowAnalysis.Models.ViewModels
+@inject AuthenticationStateProvider GetAuthenticationStateAsync
 
 <div class="page">
   <div class="sidebar">
@@ -11,13 +13,13 @@
       <a class="navbar-brand" href="">FeelFlow Analysis</a>
       @if (HttpContext!.User.Identity!.IsAuthenticated)
       {
-        // Add User and logout btn here...
+        <button class="btn btn-primary" @onclick="LogOut">LogOut</button>
       }
       else
       {
         <div class="button-pos">
-          <button class="btn btn-primary" id="loginBtn">LogIn</button>
-          <button class="btn btn-primary" id="signupBtn">SignUp</button>
+          <NavLink href="Login"><span class="btn btn-primary">LogIn</span></NavLink>
+          <NavLink href="Signup"><span class="btn btn-primary">SignUp</span></NavLink>
         </div>
       }
     </div>
@@ -35,4 +37,10 @@
 @code {
     [CascadingParameter]
     private HttpContext? HttpContext { get; set; }
+
+    private async Task LogOut()
+    {
+      await HttpContext!.SignOutAsync();
+      navigationManager.NavigateTo("/logout", true);
+    }
 }
