--- a/FeelFlowAnalysis/Components/_Imports.razor
+++ b/FeelFlowAnalysis/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using FeelFlowAnalysis
 @using FeelFlowAnalysis.Components
 @using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Components.Authorization
