--- a/FeelFlowAnalysis/Components/App.razor
+++ b/FeelFlowAnalysis/Components/App.razor
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
+    <link rel="stylesheet" href="Styles/login.css">
+    <link rel="stylesheet" href="Styles/signup.css">
     <link rel="stylesheet" href="Styles/home.css" />
     <link rel="stylesheet" href="Styles/history.css" />
     <link rel="stylesheet" href="Styles/camera.css" />
