--- a/FeelFlowAnalysis/Components/_Imports.razor
+++ b/FeelFlowAnalysis/Components/_Imports.razor
@@ -12,3 +12,5 @@
 @using FeelFlowAnalysis.Components
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Components.Authorization
+@using FeelFlowAnalysis.Models.Settings
+@inject IApiSettings apiSettings
